--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -15,72 +15,57 @@
             android:id="@+id/iv_register_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
+            android:src="@drawable/ic_btn_back_48"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_seemeet_start"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_btn_back" />
+            app:layout_constraintTop_toTopOf="@+id/tv_seemeet_start" />
 
         <TextView
-            android:id="@+id/tv_register_register"
+            android:id="@+id/tv_seemeet_start"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="17dp"
+            android:layout_height="58dp"
             android:fontFamily="@font/spoqa_han_sans_neo_bold"
-            android:text="@string/register_register"
-            android:textColor="@color/gray06"
-            android:textSize="24sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/iv_register_back" />
-
-        <TextView
-            android:id="@+id/tv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="30dp"
-            android:fontFamily="@font/spoqa_han_sans_neo_medium"
-            android:text="@string/register_name"
-            android:textColor="@color/gray06"
-            android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_register_register" />
-
-        <EditText
-            android:id="@+id/et_name"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginEnd="16dp"
-            android:background="@drawable/selector_apply_search"
-            android:fontFamily="@font/spoqa_han_sans_neo_regular"
-            android:hint="@string/register_name"
-            android:inputType="textPersonName"
-            android:paddingStart="12dp"
-            android:textColor="@color/gray06"
-            android:textSize="14sp"
+            android:gravity="center_vertical"
+            android:lineSpacingExtra="14sp"
+            android:text="SeeMeet 시작하기"
+            android:textColor="@color/black"
+            android:textSize="18sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_name" />
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/iv_register_x"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:clickable="true"
+            android:padding="17dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_x" />
 
         <TextView
             android:id="@+id/tv_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="42dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="30dp"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
             android:text="@string/email"
             android:textColor="@color/gray06"
             android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="@+id/tv_name"
-            app:layout_constraintTop_toBottomOf="@+id/et_name" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_seemeet_start" />
 
         <EditText
             android:id="@+id/et_email_register"
             android:layout_width="0dp"
-            android:layout_height="56dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
+            android:layout_marginEnd="16dp"
             android:background="@drawable/selector_apply_search"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
             android:hint="@string/email"
@@ -88,8 +73,8 @@
             android:paddingStart="12dp"
             android:textColor="@color/gray06"
             android:textSize="14sp"
-            app:layout_constraintEnd_toEndOf="@+id/et_name"
-            app:layout_constraintStart_toStartOf="@+id/et_name"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_id" />
 
         <TextView
@@ -109,18 +94,18 @@
             android:id="@+id/tv_pw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="42dp"
+            android:layout_marginTop="17dp"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
             android:text="@string/pw"
             android:textColor="@color/gray06"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/tv_id"
-            app:layout_constraintTop_toBottomOf="@+id/et_email_register" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_warning_email" />
 
         <EditText
             android:id="@+id/et_pw"
             android:layout_width="0dp"
-            android:layout_height="56dp"
+            android:layout_height="50dp"
             android:layout_marginTop="12dp"
             android:background="@drawable/selector_apply_search"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
@@ -133,6 +118,17 @@
             app:layout_constraintEnd_toEndOf="@+id/et_email_register"
             app:layout_constraintStart_toStartOf="@+id/et_email_register"
             app:layout_constraintTop_toBottomOf="@+id/tv_pw" />
+
+        <ImageView
+            android:id="@+id/iv_pw_show_hidden"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/et_pw"
+            app:layout_constraintEnd_toEndOf="@+id/et_pw"
+            app:layout_constraintTop_toTopOf="@+id/et_pw"
+            app:srcCompat="@drawable/ic_pw_hidden" />
 
         <TextView
             android:id="@+id/tv_warning_pw"
@@ -151,18 +147,18 @@
             android:id="@+id/tv_checkpw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="42dp"
+            android:layout_marginTop="17dp"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
             android:text="@string/register_checkpw"
             android:textColor="@color/gray06"
             android:textSize="14sp"
             app:layout_constraintStart_toStartOf="@+id/tv_pw"
-            app:layout_constraintTop_toBottomOf="@+id/et_pw" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_warning_pw" />
 
         <EditText
             android:id="@+id/et_checkpw"
             android:layout_width="0dp"
-            android:layout_height="56dp"
+            android:layout_height="50dp"
             android:layout_marginTop="12dp"
             android:background="@drawable/selector_apply_search"
             android:fontFamily="@font/spoqa_han_sans_neo_regular"
@@ -174,6 +170,17 @@
             app:layout_constraintEnd_toEndOf="@+id/et_pw"
             app:layout_constraintStart_toStartOf="@+id/et_pw"
             app:layout_constraintTop_toBottomOf="@+id/tv_checkpw" />
+
+        <ImageView
+            android:id="@+id/iv_checkpw_show_hidden"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/et_checkpw"
+            app:layout_constraintEnd_toEndOf="@+id/et_checkpw"
+            app:layout_constraintTop_toTopOf="@+id/et_checkpw"
+            app:srcCompat="@drawable/ic_pw_hidden" />
 
         <TextView
             android:id="@+id/tv_warning_checkpw"
@@ -192,22 +199,22 @@
             android:id="@+id/view_line"
             android:layout_width="wrap_content"
             android:layout_height="1dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="163dp"
             android:background="@color/gray02"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/et_checkpw" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_warning_checkpw" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btn_register"
+            android:id="@+id/btn_register_next"
             android:layout_width="0dp"
             android:layout_height="54dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/rectangle_gray02_10"
             android:clickable="false"
             android:enabled="false"
             android:fontFamily="@font/spoqa_han_sans_neo_medium"
-            android:text="@string/register_register"
+            android:text="다음으로"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="@+id/et_pw"
